--- a/src/scss/page/_header.scss
+++ b/src/scss/page/_header.scss
@@ -39,10 +39,10 @@ header{
         &#{-logo} {
             >a{
                  >img {
-                     width: 150px;
-                     padding: 0.75rem 0;
+                     width: 120px;
+                     padding: 0.5rem 0 0.5rem 0.5rem;
                      @include media-min($xl) {
-                        padding: 0.5rem $grid-gutters/2;
+                        padding: 0.75rem $grid-gutters/2;
                     }
                  }
             }
@@ -51,15 +51,15 @@ header{
 
         &#{-btn} {
             position: absolute;
-            top: 1rem;
-            right: 1rem;
+            top: 0.5rem;
+            right: 0.75rem;
             margin-left: auto;
-            border: 0.0625rem #fcfdfd solid;
+            border: 0.0625rem transparent solid;
             background-color: transparent;
             display: flex;
             align-items: center;
             justify-content: center;
-            padding: 0.65rem 0.65rem;
+            padding: 0.5rem 0.5rem;
             cursor: pointer;
             
             @include media-min($xl) {
@@ -69,7 +69,7 @@ header{
                 border-top:solid #fcfdfd 0.125rem;
                 border-bottom:solid #fcfdfd 0.125rem;
                 width: 1.5rem;
-                height: 1.25rem;
+                height: 1rem;
                 pointer-events: none;
                 transition: all 0.3s;
             }
@@ -149,16 +149,16 @@ header{
                     width: 100%;
                 }
                 &#{-link} {
-                    @include py(1.5rem);
+                    @include py(1rem);
                     @include media-max($xl) {
-                        @include py(1rem);
+                        @include py(0.75rem);
                     }
                     display: block;
                     height: 100%;
                     color: #fdfafa;
                     position: relative;
                     font-weight: bolder;
-                    font-size: 1rem;
+                    font-size: 0.875rem;
                     @include media-max($md) {
                         font-size: 0.875rem;
                     }
@@ -250,8 +250,7 @@ header{
                     @include py(0.5rem);
                 }
                 color: #fdfafa;
-                font-weight: 700;
-                font-size: 0.935rem;
+                font-size: 0.875rem;
                 @include media-max($md) {
                     font-size: 0.875rem;
                 }
