--- a/src/scss/_variable.scss
+++ b/src/scss/_variable.scss
@@ -54,8 +54,7 @@ $container-width:(
     "sm": 576px,
     "md": 768px,
     "lg": 992px,
-    "xl": 1200px,
-    "xxl":1460px
+    "xl": 1200px
 )!default;
     
 //*********************
@@ -92,40 +91,40 @@ $FontSize-display-2:(
     "xxs": 2rem,
     "xs":  2.5rem,
     "sm":  3rem,
-    "md":  3.5rem,
-    "lg":  4rem,
-    "xl":  4.5rem,
-    "xxl": 5rem,
+    "md":  3.125rem,
+    "lg":  3.125rem,
+    "xl":  3.125rem,
+    "xxl": 3.125rem,
 )!default;
 
 $FontSize-display-3:(
     "xxs": 1.5rem,
     "xs":  1.75rem,
     "sm":  2rem,
-    "md":  2.25rem,
+    "md":  2.5rem,
     "lg":  2.5rem,
-    "xl":  3rem,
-    "xxl": 3.5rem,
+    "xl":  2.5rem,
+    "xxl": 2.5rem,
 )!default;
 
 $FontSize-display-4:(
     "xxs": 1.25rem,
     "xs":  1.375rem,
     "sm":  1.5rem,
-    "md":  1.75rem,
-    "lg":  2rem,
-    "xl":  2.25rem,
-    "xxl": 2.5rem,
+    "md":  1.5rem,
+    "lg":  1.5rem,
+    "xl":  1.5rem,
+    "xxl": 1.5rem,
 )!default;
 
 $FontSize-display-5:(
     "xxs": 1rem,
     "xs":  1.125rem,
-    "sm":  1.25rem,
-    "md":  1.375rem,
-    "lg":  1.5rem,
-    "xl":  1.75rem,
-    "xxl": 2rem,
+    "sm":  1.125rem,
+    "md":  1.25rem,
+    "lg":  1.25rem,
+    "xl":  1.25rem,
+    "xxl": 1.25rem,
 )!default;
 
 //*************
