--- a/src/scss/page/_home.scss
+++ b/src/scss/page/_home.scss
@@ -16,7 +16,7 @@
             background-position: 47% center;
             background-size: cover;
             z-index: 4;
-            animation: star-sky-1 5s linear infinite;
+            animation: star-sky-1 5s linear infinite;//
         }
         &#{-bgLower}{
             position: absolute;
@@ -26,7 +26,7 @@
             bottom: 0;
             background-position: 47% center;
             background-size: cover;
-            z-index: 4;
+            z-index: 5;
             animation: star-sky-2 5s linear infinite;
         }
         &#{-container}{
@@ -50,13 +50,11 @@
                     @include display-2;
                     font-weight: bolder;
                     color: #fdfcfc;
-                    margin-left: -0.5rem;
-                    margin-bottom: 1rem;
+                    margin-bottom: 0.5rem;
                     text-shadow: 0.0625rem 0.0625rem 0.25rem rgba(0,0,0,0.8);
                 }
                 h3{
-                    @include display-3;
-                    font-weight: bolder;
+                    @include display-4;
                     color: #fdfcfc;
                     margin-top: 0.5rem;
                     margin-bottom: 1rem;
@@ -64,14 +62,10 @@
                 }
                 button{
                      @include stretched-link;
-                     display: inline-block;
                      @include btn-outline(#fdfcfc,#000);
-                     font-size: 1.125rem;
-                     font-weight: bolder;
-                     padding: 0.625rem 1.5rem;
+                     @include outline;
                      margin-top: 0.5rem;
                      margin-bottom: 9rem;
-                     border-radius: 0.25rem;
                 }
             }
         }
@@ -137,10 +131,7 @@
                 }
                 button{
                     @include btn-outline(#b68b69,#fdfcfc);
-                    border-radius: 0.25rem;
-                    font-size: 1.125rem;
-                    font-weight: bolder;
-                    padding: 0.625rem 2.75rem;
+                    @include outline;
                     margin-top: 0.5rem;
                     margin-bottom: 1.5rem;
                     @include media-max($md) {
@@ -169,9 +160,7 @@
             &#{-button}{
                 @include btn-outline(#fdfcfc,#333a44);
                 border-radius: 0.25rem;
-                font-size: 1.125rem;
-                font-weight: bolder;
-                padding: 0.625rem 2.5rem;
+                @include outline;
                 margin-top: 1rem;
                 margin-bottom: 2rem;
                 
@@ -262,14 +251,14 @@
                 font-size: 1.125rem;
                 font-weight: bolder;
                 padding: 0.625rem 2.5rem;
-                
             }
             &#{-row}{
                 @include row;
                 @include my(2rem);
+
                 &#{-col}{
-                    @include col(100%);
-                    @include media-min($lg) {
+                        @include col(100%);
+                        @include media-min($lg) {
                         @include col(33.333%);
                     }
                     @include py(0.625rem);
